	(The Kendall case is the wish of PR#13691.)

    o	R now keeps track of line numbers during execution for
	code sourced with options(keep.source = TRUE).	The source
	reference is displayed by debugging functions such as traceback(),
	browser(), recover(), and dump.frames(), and is stored as an
	attribute on each element returned by sys.calls(). [Experimental]

    o	quantile.default() now disallows factors (wish of PR#13631)
	and its help documents what numeric-like properties its input
	need to have to work correctly.

    o	weighted.mean() is now generic and has "Date", "POSIXct" and
	"POSIXlt" methods.

    o	Naming subscripts (e.g. x[i=1, j=2]) in data.frame methods for
	[ and [[ now gives a warning.  (Names are ignored in the
	default method, but could have odd semantics for other
	methods, and do for the data.frame ones.)

    o	as.data.frame() has an "aovproj" method.  (Wish of PR#13505)

    o	as.character(x) for numeric x no longer produces strings such as
	"0.30", i.e., with trailing zeros.  This change also renders
	levels construction in factor() more consistent.

    o	codocClasses(), which checks consistency of the documentation of
	S4 class slots, now does so in considerably more cases.  The
	documentation of inherited slots (from superclasses) is now
	optional.  This affects 'R CMD check <pkg>' when the package
	defines S4 classes.

    o	codoc() now also checks S4 methods for code/documentation
	mismatches.

    o	for(), while(), and repeat() loops  now always return NULL as
	their (invisible) value.  This change was needed to address a
	reference counting bug without creating performance penalties
	for some common use cases.

    o	The print() method for ls.str() results now obeys an optional
	'digits' argument.

    o	The 'method' argument of glm() now allows user-contributed methods.

    o	More general reorder.default() replaces functionality of
	reorder.factor() and reorder.character().
