@@ -122,6 +122,8 @@ NEW FEATURES
 	browser(), recover(), and dump.frames(), and is stored as an
 	attribute on each element returned by sys.calls(). [Experimental]
 
+    o	More functions now have an implicit (S4) generic definition.
+
     o	quantile.default() now disallows factors (wish of PR#13631)
 	and its help documents what numeric-like properties its input
 	need to have to work correctly.
@@ -610,7 +612,7 @@ BUG FIXES
 
     o	cat() on an unopened connection could close it twice, and
 	with file() connections segfaulted on some systems.
-	
+
     o	Printing a list could segfault if the elements are nested too
 	deeply.
 
